# gguf

./: CNAME  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  crates.js  help.html  index.html  rustfmt.toml  settings.html  src-files.js  test_model.gguf
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security.yml
benches/: gguf_benchmarks.rs
examples/: async_usage.rs  basic_usage.rs  create_test_gguf.rs  inspect_gguf.rs  roundtrip_test.rs  test_real_file.rs  test_real_gguf.rs
gguf/: all.html  index.html
gguf-cli/: Cargo.toml
gguf-cli/src/: main.rs
gguf/async/: index.html  struct.AsyncGGUFFile.html
gguf/builder/: index.html
gguf/error/: enum.GGUFError.html  index.html  sidebar-items.js  type.Result.html
gguf/format/: index.html
gguf/metadata/: index.html  struct.Metadata.html
gguf/mmap/: index.html  struct.MmapGGUFFile.html  struct.MmapGGUFReader.html
gguf/prelude/: index.html
gguf/reader/: index.html
gguf/tensor/: index.html  sidebar-items.js
gguf/writer/: index.html
gguf_rs/: all.html  index.html  sidebar-items.js
gguf_rs/async/: index.html  struct.AsyncGGUFFile.html
gguf_rs/builder/: index.html  sidebar-items.js
gguf_rs/error/: enum.GGUFError.html  index.html  type.Result.html
gguf_rs/format/: index.html
gguf_rs/metadata/: index.html  struct.Metadata.html
gguf_rs/mmap/: index.html  sidebar-items.js  struct.MmapGGUFFile.html  struct.MmapGGUFReader.html
gguf_rs/prelude/: index.html
gguf_rs/reader/: index.html  sidebar-items.js
gguf_rs/tensor/: index.html
gguf_rs/writer/: index.html  sidebar-items.js
gguf_rs_lib/: all.html  index.html
gguf_rs_lib/async/: index.html  sidebar-items.js  struct.AsyncGGUFFile.html
gguf_rs_lib/builder/: index.html
gguf_rs_lib/error/: enum.GGUFError.html  index.html  type.Result.html
gguf_rs_lib/format/: index.html  sidebar-items.js
gguf_rs_lib/metadata/: index.html  struct.Metadata.html
gguf_rs_lib/mmap/: index.html  struct.MmapGGUFFile.html  struct.MmapGGUFReader.html
gguf_rs_lib/prelude/: index.html
gguf_rs_lib/reader/: index.html
gguf_rs_lib/tensor/: index.html
gguf_rs_lib/writer/: index.html
search.index/: 000185ae68f5.js  002d8fe78624.js  00c14ece8595.js  00d7fba020a1.js  00d853584e62.js  0104f8bf169a.js  0152c7941297.js  01dc0c22a620.js  0219c2416961.js  0249221d450c.js  026637b2a316.js  027141314362.js  02a8b6b7ca2f.js  02cf36cd48d9.js  02eb290a8ddf.js  033c0a6ff92e.js  035b54e83101.js  03f903eca973.js  041185416f85.js  0416d264cae0.js  0520a865cf1e.js  05729521f951.js  05afb935b868.js  05b43d200871.js  05e95f05e785.js  062d96be0e8c.js  063eb69e0448.js  068659b6650b.js  068f270cd951.js  07b599ff4007.js  0828f2fab979.js  085d6b99e00b.js  08c4e0ef4cea.js  092bf3748ea6.js  09d0a187cbd2.js  09e5d0127caa.js  0a3af5477f34.js  0a72ce33ad68.js  0a78619e2730.js  0a88f8b2d0f3.js  (+604 more)
search.index/crateNames/: 2a985abc22e6.js  a43a2678dac4.js  de6e85718d3a.js
search.index/desc/: 80026a668f55.js  c60897a2d64d.js  (+1 more)
src/: async.rs  error.rs  integration_test.rs  lib.rs  metadata.rs  mmap.rs
tests/: integration_tests.rs  lib.rs
(+607 files in other folders)
