[workspace]
members = [
    ".",
    "gguf-cli",
]
resolver = "2"

[package]
name = "gguf"
version = "0.1.0"
edition = "2021"
description = "A Rust library for reading and writing GGUF (GGML Universal Format) files"
authors = ["Claude Code", "Wyatt Roersma"]
license = "MIT"
repository = "https://github.com/ThreatFlux/gguf_rs"
homepage = "https://github.com/ThreatFlux/gguf_rs"
documentation = "https://docs.rs/gguf"
readme = "README.md"
keywords = ["gguf", "ggml", "machine-learning", "format", "parser"]
categories = ["parsing", "data-structures", "science"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
# Removed to avoid recursion issues - using manual endian conversion
# byteorder = "1.5"

# Optional dependencies for additional functionality
tokio = { version = "1.0", features = ["io-util", "fs"], optional = true }
memmap2 = { version = "0.9", optional = true }

[features]
default = ["std"]
std = []
async = ["dep:tokio"]
mmap = ["dep:memmap2"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tokio-test = "0.4"
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bench]]
name = "gguf_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]